tests/errors/unused-group.expect
---CODE---
1
---STDERR---
Error: 
4 |    group cond {
  |          ^^^^ Group not used in control
